Intro of animation to platform

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 </head>
 
 <body class="cds-theme-zone-white">
+    <div class="generativeBackground" id="flair"></div>
     <cds-modal preventCloseOnClickOutside="true" alert="true" id="offline-modal">
         <cds-modal-header>
             <cds-modal-heading>
