Updating wording etc

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
         <div class="boxCont mobileItems">
             <form>
-                <cds-text-input autocomplete="off" id="input" label="Input your prompt" helper-text="Paradoxical will make it into a paradox"
+                <cds-text-input autocomplete="off" id="input" label="Insert your question" helper-text="Paradoxical will elude the truth"
                     autofocus="true" required="true" styles="cds-text-input"></cds-text-input>
                 <br>
                 <cds-button-set id="button-set">
@@ -67,7 +67,7 @@
                 <h3 id="q">Q</h3>
                 <p id="a">A</p>
             </cds-tile>
-            <p class="footer" id="footer">Powered by Llama-3-8b-instruct</p>
+            <p class="footer" id="footer">Powered by llama-2-7b-chat-int8</p>
         </div>
     </div>
     <div class="generativePane" id="bottom">
